--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,11 +1,24 @@
 <%- include("partials/header") %>
+<div class="container">
+    <div class="row">
+        <h1 class="text-center">Create a New Campground</h1>
+        <div style="width:30%; margin: 25px auto;">
+            <form action="/campgrounds" method="POST">
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="name" name="name"/>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" placeholder="image url" name="image"/>    
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lrg btn-primary btn-block">Submit</button>
+                </div>                
+            </form>
+            <a href="/campgrounds">Go Back</a>
+        </div>
+        
 
-<h1>Add Campground</h1>
-<a href="/campgrounds">Go Back</a>
-<form action="/campgrounds" method="POST">
-    <input type="text" placeholder="name" name="name"/>
-    <input type="text" placeholder="image url" name="image"/>
-    <button>Submit</button>
-</form>
+    </div>
+</div>
 
 <%- include("partials/footer") %>
