connected to MogoDB

--- a/views/campgrounds.ejs
+++ b/views/campgrounds.ejs
@@ -18,11 +18,11 @@
         </div>
     </div>
         <% camps.forEach(camp =>{ %>     
-            <div class="col-sm">
+            <div class="col-lg-4">
                 <h4>
                     <%= camp.name %> 
                 </h4>
-                <img src="<%= camp.image %>">
+                <img class="img-thumbnail" src="<%= camp.image %>">
             </div>
         
         
